Added author of movie cards on index page

--- a/templates/lista_filmow.html
+++ b/templates/lista_filmow.html
@@ -80,7 +80,8 @@
                   </div>
 
                   <div class="row">
-                      <p class="by-author">Pozycja dodana przez użytkownika {{ user.username }}</p>
+                      <p class="by-author">Pozycja dodana przez: <b>{{ film.author }}</b>
+                      </p>
                   </div>
 
               </div>
