Minor HTML, CSS changes before merge

--- a/templates/lista_filmow.html
+++ b/templates/lista_filmow.html
@@ -80,7 +80,7 @@
                   </div>
 
                   <div class="row">
-                      <p class="by-author">Pozycja dodana przez: <b>{{ film.author }}</b>
+                      <p class="by-author">Dodane / zmodyfikowane pzez: <b>{{ film.updated_by }}</b>
                       </p>
                   </div>
 
